[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_sirtemi"
version = "0.0.4"
authors = [
  { name="TemiTope Kayode", email="engrtopekayode@gmail.com" },
]
description = "A python package that simplifies using the Kuda Bank Api"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["kuda bank", "pykuda"]
dependencies = [
    "requests",
    "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/sir-temi/pykuda"
"Bug Tracker" = "https://github.com/sir-temi/pykuda/issues"